[gd_scene load_steps=2 format=3 uid="uid://cav4pqjv8grpd"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_138p1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -68.0
offset_right = 48.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_138p1")

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 97.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "RESUME"

[node name="SaveGame" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "SAVE GAME"

[node name="Options" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "OPTIONS"

[node name="MainMenu" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "MAIN MENU"

[node name="Quit" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MenuButtons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MenuButtons/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="MenuButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuButtons/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MenuButtons/Quit" to="." method="_on_quit_pressed"]
